# zappy

./: .gitignore  .travis.yml  Makefile  README.md  autotest.py  detroy_all.py  package.json  test.py
client/: a.out  main.c
client_ia/: .babelrc  .gitignore  bot.js  client_ia.js  index.html  neuralDatas.json  package-lock.json  package.json  start_multiple.sh  zappy_ai.js  zappy_ai_neural.js
clientqt/: .gitignore  CMakeLists.txt  README.md
clientqt/include/: Inventaire.hpp  MainWindow.hpp  RenderCanvas.hpp  Singleton.hpp
clientqt/include/Game/: Animation.hpp  Egg.hpp  Game.hpp  GameExeception.hpp  Inventaire.hpp  Map.hpp  MapSquare.hpp  Player.hpp  Team.hpp  Tile.hpp
clientqt/include/Model/: EggTableModel.hpp  MessageTableModel.hpp  PlayerTableModel.hpp  TeamTableModel.hpp  TileTableModel.hpp
clientqt/include/Network/: Network.hpp  SafeQueue.hpp  TCPSocket.hpp
clientqt/include/QSFML/: KeyConverter.hpp  QSFMLWidget.hpp
clientqt/include/Scene/: GameScene.hpp  Scene.hpp  SceneManager.hpp  SplashScene.hpp
clientqt/src/: MainWindow.cpp  RenderCanvas.cpp  main.cpp
clientqt/src/Game/: Animation.cpp  Egg.cpp  Egg.hpp  Game.cpp  Game.hpp  Inventaire.cpp  Inventaire.hpp  Map.cpp  MapSquare.cpp  Player.cpp  Player.hpp  Team.cpp  Team.hpp  Tile.cpp  Tile.hpp
clientqt/src/Model/: EggTableModel.cpp  MessageTableModel.cpp  PlayerTableModel.cpp  TeamTableModel.cpp  TeamTableModel.hpp  TileTableModel.cpp
clientqt/src/Network/: Network.cpp  TCPSocket.cpp
clientqt/src/QSFML/: KeyConverter.cpp  QSFMLWidget.cpp
clientqt/src/Scene/: GameScene.cpp  Scene.cpp  SceneManager.cpp  SplashScene.cpp
clientqt/src/UI/: MainWindow.ui
include/: Event.h  Graphic.h  Incantation.h  Player.h  Server.h  Socket.h  Team.h  World.h  basic_data.h  mouvement.h  unix_cbuffer.h  zappy.h
src/: Eggs.c  Parser.c  Parser2.c  Player.c  Server.c  Socket.c  Team_gestion.c  World.c  action.c  basic_data.c  check_data_undefine.c  checker.c  command_broadcast.c  command_egg.c  command_end_gestion.c  command_look.c  commande.c  commande2.c  commande3.c  connection_graphic.c  connection_undefine.c  incantation.c  (+22 more)
(+98 files in other folders)
